--- a/web-app/Views/Shared/_Layout.cshtml
+++ b/web-app/Views/Shared/_Layout.cshtml
@@ -3,20 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - web_app</title>
+    <title>@ViewData["Title"] - PickitUp</title>
     <script type="importmap"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/web_app.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/PickitUp.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <div class="row">
-            <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">web_app</a>
-        </div>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PickitUp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,15 +21,40 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <div>
+            <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw4074c54a/Banners/Dailywear_Desktop.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw67b32eba/homepage/HeroBanner/best%20deals%20may%20web.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dwffb17033/Banners/tanishqgoldcoin_Desktop.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -42,7 +64,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - web_app - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - PickitUp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
