--- a/web-app/Views/Home/Index.cshtml
+++ b/web-app/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
 
 <!-- Chat Iframe -->
 <div id="chat-iframe-container" style="display:none">
-    <iframe src="https://localhost:7034/" width="100%" height="500"></iframe>
+    <iframe src="http://localhost:8502/" width="100%" height="500"></iframe>
 </div>
 
 <div tabindex="0" role="button" class="chatRootIcon__pointer___QslJf" aria-labelledby="rootChatIcon">
