add dynamic home page banner and add login controller

--- a/web-app/Views/Home/Index.cshtml
+++ b/web-app/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    ViewData["IsBanner"] = true;
 }
 
 <div class="text-center">
@@ -66,7 +67,7 @@
 
 <!-- Chat Iframe -->
 <div id="chat-iframe-container" style="display:none">
-    <iframe src="http://localhost:8502/" width="100%" height="500"></iframe>
+    <iframe src="http://localhost:8501/" width="100%" height="500"></iframe>
 </div>
 
 <div tabindex="0" role="button" class="chatRootIcon__pointer___QslJf" aria-labelledby="rootChatIcon">
