--- a/web-app/Views/Shared/_Layout.cshtml
+++ b/web-app/Views/Shared/_Layout.cshtml
@@ -10,12 +10,18 @@
     <link rel="stylesheet" href="~/PickitUp.styles.css" asp-append-version="true" />
 </head>
 <body>
+    @*Data variables*@
+    @{
+        bool? isBannerAvailable = Convert.ToBoolean(ViewBag.IsBanner);
+    }
+
     <header>
+        <!--Nav bar-->
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PickitUp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -27,33 +33,43 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
-        <div>
-            <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
 
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw4074c54a/Banners/Dailywear_Desktop.jpg" class="d-block w-100" alt="...">
+        @if (isBannerAvailable != null && isBannerAvailable == true) 
+        {
+            <!--Banner section-->
+            <div>
+                <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw4074c54a/Banners/Dailywear_Desktop.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw67b32eba/homepage/HeroBanner/best%20deals%20may%20web.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dwffb17033/Banners/tanishqgoldcoin_Desktop.jpg" class="d-block w-100" alt="...">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dw67b32eba/homepage/HeroBanner/best%20deals%20may%20web.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://www.tanishq.com/dw/image/v2/BJGM_PRD/on/demandware.static/-/Library-Sites-TanishqSharedLibraryUSA/default/dwffb17033/Banners/tanishqgoldcoin_Desktop.jpg" class="d-block w-100" alt="...">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-        </div>
+        }
 
     </header>
     <div class="container">
