set static admin login credential

--- a/web-app/Views/Shared/_Layout.cshtml
+++ b/web-app/Views/Shared/_Layout.cshtml
@@ -75,6 +75,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+            <partial name="_NotificationPartial" />
         </main>
     </div>
 
